<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/preference_title_location">

        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="USE_DEVICE_LOCATION"
            android:summary="La appen bruke din nåværende posisjon for varsler"
            android:title="Posisjonsbasert varsel"
            app:iconSpaceReserved="false" />

        <Preference
            android:dependency="USE_DEVICE_LOCATION"
            android:icon="@drawable/ic_search_black"
            android:iconSpaceReserved="true"
            android:key="location_search_settings"
            android:title="Søk etter område"
            app:fragment="com.example.helse.ui.SearchFragment"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:iconSpaceReserved="false"
        android:title="@string/preference_title_dashboard">

        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="false"
            android:key="AIRQUALITY_MODULE_ENABLE_MODULE"
            android:title="Luftkvalitet"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="false"
            android:key="UV_MODULE_ENABLE_MODULE"
            android:title="UV-stråling"
            app:iconSpaceReserved="false"/>
        <CheckBoxPreference
            android:key="HUMIDITY_MODULE_ENABLE_MODULE"
            android:title="Luftfuktighet"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:enabled="false"
            android:key="ALLERGY_MODULE_ENABLE_MODULE"
            android:title="Pollenspredning"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:iconSpaceReserved="false"
        android:title="@string/preference_title_push">

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="AIRQUALITY_MODULE_ENABLE_MODULE"
            android:key="AIRQUALITY_MODULE_ENABLE_NOTIFICATIONS"
            android:title="Varsel for luftkvalitet"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="UV_MODULE_ENABLE_MODULE"
            android:key="UV_MODULE_ENABLE_NOTIFICATIONS"
            android:title="Varsel for UV-stråling"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:dependency="HUMIDITY_MODULE_ENABLE_MODULE"
            android:key="HUMIDITY_MODULE_ENABLE_NOTIFICATIONS"
            android:title="Varsel for Luftfuktighet"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:dependency="ALLERGY_MODULE_ENABLE_MODULE"
            android:key="ALLERGY_MODULE_ENABLE_NOTIFICATIONS"
            android:title="Varsel for Pollenspredning"
            app:iconSpaceReserved="false"
            android:enabled="false"/>
    </PreferenceCategory>


</PreferenceScreen>

