<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="20dp"
        android:theme="@style/ToolbarTitleTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/your_location"
        android:src="@drawable/ic_location_on_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_title" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/your_location"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorGreyLight"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_icon"
        tools:text="Location" />

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:text="Displaying values for time" />

    <pl.pawelkleczkowski.customgauge.CustomGauge
        android:id="@+id/gauge"
        android:layout_width="190dp"
        android:layout_height="185dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/app_name"
        android:padding="17dp"
        app:gaugeEndValue="5"
        app:gaugeStartAngle="135"
        app:gaugeStartValue="1"
        app:gaugeStrokeCap="ROUND"
        app:gaugeStrokeColor="@color/colorLightBlueGrey"
        app:gaugeStrokeWidth="11dp"
        app:gaugeSweepAngle="270"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_and_date" />

    <ImageView
        android:id="@+id/gauge_img"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_airquality_2x"
        app:layout_constraintBottom_toBottomOf="@+id/gauge"
        app:layout_constraintEnd_toEndOf="@+id/gauge"
        app:layout_constraintStart_toStartOf="@+id/gauge"
        app:layout_constraintTop_toTopOf="@+id/gauge" />

    <TextView
        android:id="@+id/risk_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/gauge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="RISK LABEL" />

    <View
        android:id="@+id/horizontal_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightBlueGrey"
        app:layout_constraintBottom_toTopOf="@+id/middle_vertical_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/horizontal_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorLightBlueGrey"
        app:layout_constraintBottom_toTopOf="@+id/risk_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/right_vertical_divider"
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorLightBlueGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pm10_concentration"
        app:layout_constraintStart_toEndOf="@+id/o3_concentration" />

    <View
        android:id="@+id/middle_vertical_divider"
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorLightBlueGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/o3_concentration"
        app:layout_constraintStart_toEndOf="@+id/pm25_concentration" />

    <View
        android:id="@+id/left_vertical_divider"
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorLightBlueGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pm25_concentration"
        app:layout_constraintStart_toEndOf="@+id/no2_concentration" />

    <TextView
        android:id="@+id/pm25_concentration"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/concentration_placeholder"
        android:textColor="@color/colorGreyDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/o3_concentration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no2_concentration" />

    <TextView
        android:id="@+id/no2_concentration"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/concentration_placeholder"
        android:textColor="@color/colorGreyDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pm25_concentration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/o3_concentration"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/concentration_placeholder"
        android:textColor="@color/colorGreyDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pm10_concentration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pm25_concentration" />

    <TextView
        android:id="@+id/pm10_concentration"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/concentration_placeholder"
        android:textColor="@color/colorGreyDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/o3_concentration" />

    <TextView
        android:id="@+id/pm10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/pm1_0"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/pm10_concentration"
        app:layout_constraintEnd_toEndOf="@+id/pm10_concentration"
        app:layout_constraintStart_toStartOf="@+id/pm10_concentration" />

    <TextView
        android:id="@+id/pm25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/pm2_5"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/pm25_concentration"
        app:layout_constraintEnd_toEndOf="@+id/pm25_concentration"
        app:layout_constraintStart_toStartOf="@+id/pm25_concentration" />

    <TextView
        android:id="@+id/o3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/o3"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/o3_concentration"
        app:layout_constraintEnd_toEndOf="@+id/o3_concentration"
        app:layout_constraintStart_toStartOf="@+id/o3_concentration" />

    <TextView
        android:id="@+id/no2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/no2"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/no2_concentration"
        app:layout_constraintEnd_toEndOf="@+id/no2_concentration"
        app:layout_constraintStart_toStartOf="@+id/no2_concentration" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/risk_list"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>