<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_module"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        app:cardBackgroundColor="#12FFFFFF"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/module_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/category_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/module_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="22dp"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.04"
                android:text="@string/category_title"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/module_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/value_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.05"
                android:paddingStart="12dp"
                android:paddingTop="3dp"
                android:paddingEnd="12dp"
                android:paddingBottom="3dp"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/module_icon"
                app:layout_constraintTop_toBottomOf="@+id/module_title"
                app:strokeWidth="0dp" />

            <ImageView
                android:id="@+id/push_btn"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/push_notification_icon"
                android:padding="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_notifications_enabled" />

            <ImageView
                android:id="@+id/network_error"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:contentDescription="@string/push_notification_icon"
                android:padding="6dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/value_label"
                app:layout_constraintTop_toBottomOf="@+id/module_title"
                app:srcCompat="@drawable/ic_network_error" />

            <ProgressBar
                android:id="@+id/risk_loading"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="24dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorWhite"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintStart_toEndOf="@+id/module_title"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
